--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver():\n",
     "    def greet_passenger(self):\n",
-    "        print \"Hello! I'll be your driver today. My name is self.\""
+    "        print \"Hello! I'll be your driver today. My name is self._first\""
    ]
   },
   {
