automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,32 +47,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(print \"Hello! I'll be your driver today. My name is self._first self._last\"))? (<ipython-input-2-bd78cea52264>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-bd78cea52264>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print \"Hello! I'll be your driver today. My name is self._first self._last\")\u001b[0m\n\u001b[0m                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(print \"Hello! I'll be your driver today. My name is self._first self._last\"))?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver():\n",
     "    def greet_passenger(self):\n",
-    "        print ()\"Hello! I'll be your driver today. My name is self._first self._last\")"
+    "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rachel\n",
+      "Jensen\n",
+      "100\n",
+      "4.9\n",
+      "Hello! I'll be your driver today. My name is self._first self._last\n"
+     ]
+    }
+   ],
    "source": [
     "driver = Driver()\n",
     "driver.first = \"Rachel\"\n",
