--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,8 @@
    },
    "outputs": [],
    "source": [
-    "# Define Passenger Class here with properties for each instance variable\n"
+    "# Define Passenger Class here with properties for each instance variable\n",
+    "class Pa"
    ]
   },
   {
