automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,6 +54,7 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver():\n",
     "    def greet_passenger(self):\n",
+    "        drive\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
   },
