automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,8 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver():\n",
     "    def greet_passenger(self):\n",
-    "        drive\n",
+    "        driver._first = driver.first\n",
+    "        driver._under\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
   },
