automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
     "class Driver():\n",
     "    def greet_passenger(self):\n",
     "        driver._first = driver.first\n",
-    "        driver._under\n",
+    "        driver._last= dr\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
   },
