--- a/index.ipynb
+++ b/index.ipynb
@@ -55,8 +55,8 @@
     "class Driver():\n",
     "    def greet_passenger(self):\n",
     "        driver._first = driver.first\n",
-    "        driver._last= driver.last\n",
-    "        driver._miles_drive.\n",
+    "        driver._last = driver.last\n",
+    "        driver._miles_driven = driver.miles_driven\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
   },
