automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,6 +57,7 @@
     "        driver._first = driver.first\n",
     "        driver._last = driver.last\n",
     "        driver._miles_driven = driver.miles_driven\n",
+    "        driver._rating = driver.rating\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
   },
