automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
    "source": [
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger():\n",
-    "    dr"
+    "    Passenger._first = Passenger.first()"
    ]
   },
   {
