automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,9 @@
    "source": [
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger():\n",
-    "    Passenger._first = Passenger.first()"
+    "    Passenger._first = Passenger.first\n",
+    "    Passenger._last = Passenger.last\n",
+    "    d"
    ]
   },
   {
