--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,7 @@
     "class Passenger():\n",
     "    Passenger._first = Passenger.first\n",
     "    Passenger._last = Passenger.last\n",
-    "    Passenger._email = "
+    "    Passenger._email = Passenger.email"
    ]
   },
   {
