automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,8 @@
     "    Passenger._first = Passenger.first\n",
     "    Passenger._last = Passenger.last\n",
     "    Passenger._email = Passenger.email\n",
-    "    Passenger"
+    "    def yell_name(self):\n",
+    "        print(\"\")"
    ]
   },
   {
