automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,11 +110,11 @@
    "source": [
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger():\n",
-    "    Passenger._first = Passenger.first\n",
-    "    Passenger._last = Passenger.last\n",
+    "    passenger._first = Passenger.first\n",
+    "    assenger._last = Passenger.last\n",
     "    Passenger._email = Passenger.email\n",
     "    def yell_name(self):\n",
-    "        print(\"\")"
+    "        print()"
    ]
   },
   {
