automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,8 +111,8 @@
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger():\n",
     "    passenger._first = Passenger.first\n",
-    "    assenger._last = Passenger.last\n",
-    "    Passenger._email = Passenger.email\n",
+    "    passenger._last = Passenger.last\n",
+    "    passenger._email = Passenger.email\n",
     "    def yell_name(self):\n",
     "        print()"
    ]
