automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
     "    passenger._last = Passenger.last\n",
     "    passenger._email = Passenger.email\n",
     "    def yell_name(self):\n",
-    "        print()"
+    "        print(passenger.)"
    ]
   },
   {
