automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,7 @@
     "    passenger._last = Passenger.last\n",
     "    passenger._email = Passenger.email\n",
     "    def yell_name(self):\n",
-    "        print(passenger.first.upper() + passenger.last.upper())"
+    "        print(self.first.upper() + passenger.last.upper())"
    ]
   },
   {
