automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,28 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'passenger' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-c33f72106446>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Define Passenger Class here with properties for each instance variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mPassenger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_last\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_email\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0memail\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-10-c33f72106446>\u001b[0m in \u001b[0;36mPassenger\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Define Passenger Class here with properties for each instance variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mPassenger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_last\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_email\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpassenger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0memail\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'passenger' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger():\n",
-    "    passenger._first = passenger.first\n",
-    "    passenger._last = passenger.last\n",
-    "    passenger._email = passenger.email\n",
+    "    #passenger._first = passenger.first\n",
+    "    #passenger._last = passenger.last\n",
+    "    #passenger._email = passenger.email\n",
     "    def yell_name(self):\n",
     "        print(self.first.upper() + self.last.upper())"
    ]
