automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,16 +112,25 @@
     "    #passenger._last = passenger.last\n",
     "    #passenger._email = passenger.email\n",
     "    def yell_name(self):\n",
-    "        print(self.first.upper() + self.last.upper())"
+    "        print(self.first.upper() +\" \" +self.last.upper())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ron\n",
+      "Burgundy\n",
+      "ron.burgundy1984@gmail.com\n",
+      "RONBURGUNDY\n"
+     ]
+    }
+   ],
    "source": [
     "passenger = Passenger()\n",
     "passenger.first = \"Ron\"\n",
