automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,11 +53,8 @@
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver():\n",
+    "    def get_first(self)\n",
     "    def greet_passenger(self):\n",
-    "        driver._first = driver.first\n",
-    "        driver._last = driver.last\n",
-    "        driver._miles_driven = driver.miles_driven\n",
-    "        driver._rating = driver.rating\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
   },
@@ -117,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +124,7 @@
       "Ron\n",
       "Burgundy\n",
       "ron.burgundy1984@gmail.com\n",
-      "RONBURGUNDY\n"
+      "RON  BURGUNDY\n"
      ]
     }
    ],
