--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,9 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver():\n",
     "    def get_first(self):\n",
-    "        return self._f\n",
+    "        return self._first\n",
+    "    def set_first(self):\n",
+    "        s\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
