--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
     "    def get_first(self):\n",
     "        return self._first\n",
     "    def set_first(self):\n",
-    "        s\n",
+    "        self._first = first\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
