--- a/index.ipynb
+++ b/index.ipynb
@@ -57,6 +57,8 @@
     "        return self._first\n",
     "    def set_first(self):\n",
     "        self._first = first\n",
+    "    def del_first(self):\n",
+    "        \n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
