--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,8 @@
     "    def set_first(self):\n",
     "        self._first = first\n",
     "    def del_first(self):\n",
-    "        \n",
+    "        del self._first\n",
+    "    \n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
