automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
     "        self._first = first\n",
     "    def del_first(self):\n",
     "        del self._first\n",
-    "    first = \n",
+    "    first = property(get_first, set)\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
