--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,8 @@
     "    def del_first(self):\n",
     "        del self._first\n",
     "    first = property(get_first, set_first, del_first)\n",
-    "    \n",
+    "    def get_last(self):\n",
+    "        return self._\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
