automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,9 @@
     "        del self._first\n",
     "    first = property(get_first, set_first, del_first)\n",
     "    def get_last(self):\n",
-    "        return self._\n",
+    "        return self._last\n",
+    "    def set_last(self):\n",
+    "        self.\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
