automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,8 @@
     "    def get_last(self):\n",
     "        return self._last\n",
     "    def set_last(self):\n",
-    "        self.\n",
+    "        self._last = last\n",
+    "    def del_last(self)\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
