automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,9 @@
     "        return self._last\n",
     "    def set_last(self):\n",
     "        self._last = last\n",
-    "    def del_last(self)\n",
+    "    def del_last(self):\n",
+    "        del self._last\n",
+    "    last = property\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
