automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,7 +66,7 @@
     "        self._last = last\n",
     "    def del_last(self):\n",
     "        del self._last\n",
-    "    last = property\n",
+    "    last = property(get_last, set_last, del_last)\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
