--- a/index.ipynb
+++ b/index.ipynb
@@ -67,6 +67,7 @@
     "    def del_last(self):\n",
     "        del self._last\n",
     "    last = property(get_last, set_last, del_last)\n",
+    "    def get_rating(self)\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
