--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,9 @@
     "    last = property(get_last, set_last, del_last)\n",
     "    def get_rating(self):\n",
     "        return self._rating\n",
-    "    def s\n",
+    "    def set_rating(self):\n",
+    "        self._rating = rating\n",
+    "    \n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
