automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,8 @@
     "        return self._rating\n",
     "    def set_rating(self):\n",
     "        self._rating = rating\n",
-    "    \n",
+    "    def del_rating(self):\n",
+    "        del\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
