automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,8 @@
     "    def set_rating(self):\n",
     "        self._rating = rating\n",
     "    def del_rating(self):\n",
-    "        del\n",
+    "        del self._rating\n",
+    "    \n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
