--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,7 @@
     "        self._rating = rating\n",
     "    def del_rating(self):\n",
     "        del self._rating\n",
-    "    \n",
+    "    rating = property(get_rating, )\n",
     "    def greet_passenger(self):\n",
     "        print (\"Hello! I'll be your driver today. My name is self._first self._last\")"
    ]
